...
    <>
      <View>
        <View className="px-8 py-2">
          <View className="bg-gray-800 rounded-full px-4 py-1 flex-row items-center">
            <Icon source={Search} size={24} tint="#FFFFFF" />
            <BottomSheetTextInput
              testID="search-input"
              placeholder="Search songs..."
              value={searchKeyword}
              onChangeText={setSearchKeyword}
              className="text-white text-lg font-medium bg-transparent flex-1 ml-2"
              placeholderTextColor="gray"
            />

...
