...
          <EaseView
            initialAnimate={{ opacity: 0, translateX: 20 }}
            animate={{ opacity: 1, translateX: 0 }}
            transition={{ type: "timing", duration: 500, delay: 1000 }}
          >
            <Text className="text-white/70 text-xl font-bold tracking-wider mb-4">
              Perform Your
            </Text>
          </EaseView>
          <EaseView
            initialAnimate={{ opacity: 0, translateX: 20 }}
            animate={{ opacity: 1, translateX: 0 }}
            transition={{ type: "timing", duration: 500, delay: 1200 }}
          >
            <Text className="text-white text-6xl font-bold tracking-wider">
              Favourite Music
            </Text>
          </EaseView>
        </View>
      </EaseView>
      {renderBottomSheet && <SongsBottomSheet />}
    </View>
...
